Add Panama support