@@ -25,8 +25,6 @@ dependencies {
 
 	shade compileOnly( project(':lang-api') )
 }
-loom.runConfigs.client.vmArgs( '--enable-native-access=ALL-UNNAMED', '--add-modules', 'jdk.incubator.foreign' )
-loom.runConfigs.server.vmArgs( '--enable-native-access=ALL-UNNAMED', '--add-modules', 'jdk.incubator.foreign' )
 
 processResources {
 	inputs.property 'version', project.version
